# Gibbs-Modified

./: .gitignore  Gibbs.vcxproj  Gibbs.vcxproj.filters  NaivePHLDA.sln  implementation_plan.txt  model.cpp  run_args.txt
Debug/: PLDA.ilk
ModelEvaluation/: EvalModule.hpp  ModelEvaluation.cpp  ModelEvaluation.vcxproj  ModelEvaluation.vcxproj.filters  ReadMe.txt  S0-eval.txt
PLDA/: CMakeLists.txt  MODEL-L0-K0.txt  MODEL-L1-K0.txt  MODEL-L1-K1.txt  MODEL-L1-K2.txt  MODEL-L1-K3.txt  MODEL-L1-K4.txt  MODEL-L1-K5.txt  MODEL-L1-K6.txt  MODEL-L1-K7.txt  MODEL-L1-K8.txt  MODEL-L1-K9.txt  PLDA.vcxproj  PLDA.vcxproj.filters  clPartitionData.cpp  clPartitionData.h  clwrapper.cpp  clwrapper.h  corpus.cpp  corpus.h  corpus.ser  document.cpp  document.h  experiment.cpp  experiment.h  job.cpp  job.h  job_config.cpp  job_config.h  lda_interface.cpp  lda_interface.h  main.cpp  master_sync_data.cpp  master_sync_data.h  model.cpp  model.h  mpi_helper.h  nwsum_allreduce.cl  result.txt  sampler.cpp  (+21 more)
PLDA/cl_lib/: debug.cl  lda_sample.cl  naive_benchmark.cl  rng_simplified.cl  sample.cl
PLDA/x64/Debug/: vc140.idb
PLDA/x64/Debug/PLDA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PLDA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PLDA/x64/Release/PLDA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PLDA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TestProject/: TestProject.vcxproj  TestProject.vcxproj.filters  asio_http.cpp  http_header.h  main.cpp  plda_all.h  request_handler.h  resource1.h  session.h
(+2 files in other folders)
